feat(orders): adjusted services and models for order creation integration and other minor updates

--- a/src/app/Restock/resource/orders-to-suppliers/components/create-orders-modal/create-orders-modal.component.html
+++ b/src/app/Restock/resource/orders-to-suppliers/components/create-orders-modal/create-orders-modal.component.html
@@ -12,7 +12,7 @@
               [(ngModel)]="selectedSupply"
               (selectionChange)="onSupplyChange()"
             >
-              <mat-option *ngFor="let supply of supplies" [value]="supply">{{
+              <mat-option *ngFor="let supply of providerSupplies" [value]="supply">{{
                 supply.name
               }}</mat-option>
             </mat-select>
