--- a/src/app/Restock/resource/orders-to-suppliers/components/orders-toolbar/orders-toolbar.component.html
+++ b/src/app/Restock/resource/orders-to-suppliers/components/orders-toolbar/orders-toolbar.component.html
@@ -16,14 +16,14 @@
   </div>
 
   <div class="toolbar-right">
-    <mat-form-field appearance="outline" class="filter-field">
+    <!-- <mat-form-field appearance="outline" class="filter-field">
       <mat-label>Filter by Supply</mat-label>
       <mat-select [(ngModel)]="selectedSupply">
         <mat-option *ngFor="let supply of supplies" [value]="supply.id">
           {{ supply.name }}
         </mat-option>
       </mat-select>
-    </mat-form-field>
+    </mat-form-field> -->
 
     <mat-form-field appearance="outline" class="filter-field">
       <mat-label>Filter by Supplier</mat-label>
