--- a/src/app/Restock/resource/inventory/components/add-batch-to-inventory/add-batch-to-inventory.component.html
+++ b/src/app/Restock/resource/inventory/components/add-batch-to-inventory/add-batch-to-inventory.component.html
@@ -1,5 +1,10 @@
 <form class="batch-modal-content" (ngSubmit)="onSubmit()">
-  <app-create-and-edit-form (submit)="handleFormChange($event)" />
+  <app-create-and-edit-form
+    [schema]="currentSchema"
+    [initialData]="initialData"
+    [mode]="mode"
+    (submit)="handleFormChange($event)"
+  />
 
   <div class="batch-modal-actions">
     <button mat-button type="button" (click)="cancel()">Cancel</button>
