feat(modal): refactor base modal to use ViewContainerRef for dynamic content injection

--- a/src/app/shared/components/base-modal/base-modal.component.html
+++ b/src/app/shared/components/base-modal/base-modal.component.html
@@ -6,7 +6,5 @@
 </div>
 
 <div class="modal-content">
-  <ng-container
-    *ngComponentOutlet="data.contentComponent; injector: injectorInstance"
-  ></ng-container>
+  <ng-template #container></ng-template>
 </div>
