--- a/src/app/Restock/resource/inventory/components/add-batch-to-inventory/add-batch-to-inventory.component.html
+++ b/src/app/Restock/resource/inventory/components/add-batch-to-inventory/add-batch-to-inventory.component.html
@@ -7,9 +7,9 @@
   />
 
   <div class="batch-modal-actions">
-    <button mat-button type="button" (click)="cancel()">Cancel</button>
+    <button mat-button type="button" (click)="cancel()">{{ 'inventory.cancel' | translate }}</button>
     <button mat-raised-button class="green-button" action type="submit">
-      {{ mode === 'edit' ? 'Update' : 'Save' }}
+      {{ mode === 'edit' ? ( 'inventory.update' | translate ) : ( 'inventory.save' | translate ) }}
     </button>
   </div>
 </form>
