--- a/src/app/Restock/resource/inventory/components/create-and-edit-supply/create-and-edit-supply.component.html
+++ b/src/app/Restock/resource/inventory/components/create-and-edit-supply/create-and-edit-supply.component.html
@@ -2,9 +2,9 @@
   <app-create-and-edit-form (submit)="handleFormChange($event)" />
 
   <div class="supply-modal-actions">
-    <button mat-button type="button" (click)="cancel()">Cancel</button>
+    <button mat-button type="button" (click)="cancel()">{{ 'inventory.cancel' | translate }}</button>
     <button mat-raised-button class="green-button" action type="submit">
-      {{ mode === 'edit' ? 'Update' : 'Save' }}
+      {{ mode === 'edit' ? ( 'inventory.update' | translate ) : ( 'inventory.save' | translate ) }}
     </button>
   </div>
 </form>
