--- a/src/app/Restock/resource/orders-to-suppliers/components/create-orders-modal/create-orders-modal.component.html
+++ b/src/app/Restock/resource/orders-to-suppliers/components/create-orders-modal/create-orders-modal.component.html
@@ -12,9 +12,11 @@
               [(ngModel)]="selectedSupply"
               (selectionChange)="onSupplyChange()"
             >
-              <mat-option *ngFor="let supply of providerSupplies" [value]="supply">{{
-                supply.name
-              }}</mat-option>
+              <mat-option
+                *ngFor="let supply of providerSupplies"
+                [value]="supply"
+                >{{ supply.name }}</mat-option
+              >
             </mat-select>
           </mat-form-field>
 
@@ -49,7 +51,10 @@
               <ng-container matColumnDef="select">
                 <th mat-header-cell *matHeaderCellDef>Select</th>
                 <td mat-cell *matCellDef="let el">
-                  <mat-checkbox [(ngModel)]="el.selected" [disabled]="el.disabled"></mat-checkbox>
+                  <mat-checkbox
+                    [(ngModel)]="el.selected"
+                    [disabled]="el.disabled"
+                  ></mat-checkbox>
                 </td>
               </ng-container>
 
@@ -88,15 +93,46 @@
             No suppliers selected.
           </div>
 
-          <div *ngFor="let s of fullOrder.concat(currentSelections)">
-            <strong>{{ s.supplyName }}</strong> - {{ s.name }}:
-            <input
-              type="number"
-              [(ngModel)]="s.quantity"
-              min="1"
-              style="width: 60px"
-            />
-            units S/ {{ s.price }}
+          <div class="card-grid">
+            <mat-card
+              *ngFor="let s of fullOrder.concat(currentSelections)"
+              class="supply-card"
+            >
+              <mat-card-header>
+                <mat-card-title>{{ s.supplyName }}</mat-card-title>
+                <mat-card-subtitle>{{ s.name }}</mat-card-subtitle>
+              </mat-card-header>
+
+              <mat-card-content>
+                <p><strong>Precio:</strong> S/ {{ s.price }}</p>
+                <p><strong>Disponible:</strong> {{ s.available }} unidades</p>
+
+                <mat-form-field appearance="fill" class="quantity-field">
+                  <mat-label>Cantidad</mat-label>
+                  <input
+                    matInput
+                    type="number"
+                    [(ngModel)]="s.quantity"
+                    min="1"
+                    [max]="s.available"
+                  />
+                  <mat-hint *ngIf="s.quantity > s.available" style="color: red">
+                    Máx: {{ s.available }} unidades
+                  </mat-hint>
+                </mat-form-field>
+              </mat-card-content>
+
+              <mat-card-actions align="end">
+                <button
+                  mat-icon-button
+                  color="warn"
+                  (click)="removeSupply(s)"
+                  matTooltip="Eliminar"
+                >
+                  <mat-icon>delete</mat-icon>
+                </button>
+              </mat-card-actions>
+            </mat-card>
           </div>
 
           <p>
