feat(orders): call db json data.

--- a/src/app/Restock/monitoring/suppliers-orders/pages/suppliers-orders-overview/suppliers-orders-overview.component.html
+++ b/src/app/Restock/monitoring/suppliers-orders/pages/suppliers-orders-overview/suppliers-orders-overview.component.html
@@ -1,7 +1,12 @@
 <div class="supplier-orders-container">
   <mat-tab-group>
     <mat-tab label="New Orders" >
-      <app-new-orders/>
+      <app-new-orders
+        [orders]="orders"
+        [adminRestaurantsProfiles]="restaurantNameMap"
+        [orderSuppliesDetails]="detailedSuppliesGroupedByOrder"
+        [suppliesGroupedByOrder]="suppliesGroupedByOrder"
+      />
     </mat-tab>
 
     <mat-tab label="Orders In Progress">
