--- a/src/app/Restock/monitoring/suppliers-orders/components/new-orders/new-orders.component.html
+++ b/src/app/Restock/monitoring/suppliers-orders/components/new-orders/new-orders.component.html
@@ -43,14 +43,14 @@
     <!-- Order Date -->
     <ng-container matColumnDef="orderDate">
       <th mat-header-cell *matHeaderCellDef> Order Date </th>
-      <td mat-cell *matCellDef="let order"> {{ order.orderDate }} </td>
+      <td mat-cell *matCellDef="let order"> {{ order.date }} </td>
     </ng-container>
 
     <!-- Restaurant Name -->
     <ng-container matColumnDef="restaurantName">
       <th mat-header-cell *matHeaderCellDef> Restaurant Name </th>
       <td mat-cell *matCellDef="let order">
-        {{ order.restaurantName }}
+        {{ adminRestaurantsProfiles[order.id] }}
       </td>
     </ng-container>
 
@@ -58,14 +58,14 @@
     <ng-container matColumnDef="requestedProducts">
       <th mat-header-cell *matHeaderCellDef> N° Requested Products </th>
       <td mat-cell *matCellDef="let order">
-        {{ order.requestedProducts }}
+        {{ order.requested_products_count }}
       </td>
     </ng-container>
 
     <!-- Final Price -->
     <ng-container matColumnDef="finalPrice">
       <th mat-header-cell *matHeaderCellDef> Final Price </th>
-      <td mat-cell *matCellDef="let order"> {{ order.finalPrice | currency:'S/':'symbol':'1.2-2' }} </td>
+      <td mat-cell *matCellDef="let order"> {{ order.total_price | currency:'S/':'symbol':'1.2-2' }} </td>
     </ng-container>
 
     <!-- Actions -->
