feat(orders): add missing attributes.

--- a/src/app/Restock/profiles/components/personal-data-settings/personal-data-settings.component.html
+++ b/src/app/Restock/profiles/components/personal-data-settings/personal-data-settings.component.html
@@ -17,10 +17,10 @@
         </mat-form-field>
 
         <!-- Email -->
-        <mat-label>Email</mat-label>
-        <mat-form-field class="full-width" appearance="outline">
-          <input matInput [(ngModel)]="profile.email" type="email" placeholder="Enter your email" aria-label="Email" />
-        </mat-form-field>
+<!--        <mat-label>Email</mat-label>-->
+<!--        <mat-form-field class="full-width" appearance="outline">-->
+<!--          <input matInput [(ngModel)]="user.email" type="email" placeholder="Enter your email" aria-label="Email" />-->
+<!--        </mat-form-field>-->
 
         <!-- Phone -->
         <mat-label>Phone</mat-label>
