--- a/src/app/Restock/monitoring/suppliers-orders/components/approved-orders/approved-orders.component.html
+++ b/src/app/Restock/monitoring/suppliers-orders/components/approved-orders/approved-orders.component.html
@@ -6,26 +6,26 @@
     <!-- Order Date -->
     <ng-container matColumnDef="orderDate">
       <th mat-header-cell *matHeaderCellDef> Order Date </th>
-      <td mat-cell *matCellDef="let order"> {{ order.orderDate }} </td>
+      <td mat-cell *matCellDef="let order"> {{ order.date | date }} </td>
     </ng-container>
 
     <!-- State -->
     <ng-container matColumnDef="state">
       <th mat-header-cell *matHeaderCellDef> State </th>
-      <td mat-cell *matCellDef="let order"> {{ order.state }} </td>
+      <td mat-cell *matCellDef="let order"> {{ order.state.name }} </td>
     </ng-container>
 
     <!-- Ship Date -->
     <ng-container matColumnDef="shipDate">
       <th mat-header-cell *matHeaderCellDef> Ship Date </th>
-      <td mat-cell *matCellDef="let order"> {{ order.shipDate }} </td>
+      <td mat-cell *matCellDef="let order"> {{ order.estimated_ship_date | date}} </td>
     </ng-container>
 
     <!-- Restaurant Name -->
     <ng-container matColumnDef="restaurantName">
       <th mat-header-cell *matHeaderCellDef> Restaurant Name </th>
       <td mat-cell *matCellDef="let order">
-        {{ order.restaurantName }}
+        {{ adminRestaurantsProfiles[order.id] }}
       </td>
     </ng-container>
 
@@ -33,14 +33,14 @@
     <ng-container matColumnDef="requestedProducts">
       <th mat-header-cell *matHeaderCellDef> N° Requested Products </th>
       <td mat-cell *matCellDef="let order">
-        {{ order.requestedProducts }}
+        {{ order.requested_products_count }}
       </td>
     </ng-container>
 
     <!-- Final Price -->
     <ng-container matColumnDef="finalPrice">
       <th mat-header-cell *matHeaderCellDef> Final Price </th>
-      <td mat-cell *matCellDef="let order"> {{ order.finalPrice | currency:'S/':'symbol':'1.2-2' }} </td>
+      <td mat-cell *matCellDef="let order"> {{ order.total_price | currency:'S/':'symbol':'1.2-2' }} </td>
     </ng-container>
 
     <!-- Actions -->
@@ -57,7 +57,7 @@
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" [class]="getRowClass(row)"></tr>
 
   </table>
 
