--- a/src/app/Restock/resource/orders-to-suppliers/components/orders-table/orders-table.component.html
+++ b/src/app/Restock/resource/orders-to-suppliers/components/orders-table/orders-table.component.html
@@ -30,34 +30,60 @@
   <!-- Requested Products Column -->
   <ng-container matColumnDef="requestedProducts">
     <th mat-header-cell *matHeaderCellDef>N° Requested Products</th>
-    <td mat-cell *matCellDef="let order">{{ order.supplies?.length }}</td>
+    <td mat-cell *matCellDef="let order">{{ order.requested_products }}</td>
   </ng-container>
 
   <!-- Total Price Column -->
   <ng-container matColumnDef="totalPrice">
     <th mat-header-cell *matHeaderCellDef>Final Price</th>
     <td mat-cell *matCellDef="let order">
-      ${{ order.total_price.toFixed(2) }}
+      S/. {{ order.total_price.toFixed(2) }}
     </td>
   </ng-container>
 
   <!-- Actions Column (View Details) -->
   <ng-container matColumnDef="actions">
-    <th mat-header-cell *matHeaderCellDef></th>
+    <th mat-header-cell *matHeaderCellDef>Actions</th>
     <td mat-cell *matCellDef="let order">
-      <button  mat-icon-button (click)="onViewDetails(order)">
-        <mat-icon>visibility</mat-icon>
-      </button>
+      <div class="action-icons">
+        <!-- Ícono de feedback solo si el estado es Delivered -->
+        <button
+          mat-icon-button
+          *ngIf="order.state?.name === 'Delivered'"
+          (click)="onFeedback(order)"
+        >
+          <mat-icon>feedback</mat-icon>
+        </button>
+        <!-- Reservar espacio si no se muestra -->
+        <span
+          *ngIf="order.state?.name !== 'Delivered'"
+          class="icon-placeholder"
+        ></span>
+
+        <!-- Ícono de ver detalles -->
+        <button mat-icon-button (click)="onViewDetails(order)">
+          <mat-icon>visibility</mat-icon>
+        </button>
+
+        <!-- Notificación visible según condición, con espacio reservado -->
+        <span
+          *ngIf="shouldShowNotification(order); else notificationPlaceholder"
+        >
+          <mat-icon color="warn">notifications</mat-icon>
+        </span>
+        <ng-template #notificationPlaceholder>
+          <span class="icon-placeholder"></span>
+        </ng-template>
+      </div>
     </td>
   </ng-container>
 
-  <!-- Notifications Column (Red Bell Icon Placeholder) -->
-  <ng-container matColumnDef="notifications">
+  <!-- <ng-container matColumnDef="notifications">
     <th mat-header-cell *matHeaderCellDef></th>
     <td mat-cell *matCellDef="let order">
       <mat-icon color="warn">notifications</mat-icon>
     </td>
-  </ng-container>
+  </ng-container> -->
 
   <!-- Header & Row Declarations -->
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
