--- a/src/app/Restock/resource/orders-to-suppliers/pages/orders/orders.component.html
+++ b/src/app/Restock/resource/orders-to-suppliers/pages/orders/orders.component.html
@@ -13,6 +13,7 @@
     (orderSelected)="onOrderSelected($event)"
     (viewDetails)="openDetails($event)"
     (deleteOrder)="onDeleteOrder($event)"
+    (leaveFeedback)="openFeedback($event)"
   >
   </orders-table>
 
@@ -21,5 +22,13 @@
     [providerProfiles]="providerProfiles"
   ></create-orders-modal>
 
-  <order-details-modal [order]="selectedOrder" />
+  <order-details-modal
+    [order]="selectedOrder"
+    [providerProfiles]="providerProfiles"
+  />
+
+  <order-feedback-modal
+    [order]="selectedOrder"
+    [providerProfiles]="providerProfiles"
+  />
 </div>
