fix(base-modal): add label parameter to base modal service.

--- a/src/app/shared/components/delete/delete.component.html
+++ b/src/app/shared/components/delete/delete.component.html
@@ -1,4 +1,6 @@
-<p>Are you sure you want to delete <strong>{{ data.label }}</strong>?</p>
+
+
+<p>Are you sure you want to <strong>{{ data.label }}</strong>?</p>
 
 <div class="modal-footer mt-4">
   <button mat-stroked-button class="gray-button" (click)="cancel()">Cancel</button>
