chore(profile): comment attribute.

--- a/src/app/Restock/profiles/components/profile-details/profile-details.component.html
+++ b/src/app/Restock/profiles/components/profile-details/profile-details.component.html
@@ -10,8 +10,8 @@
       <div class="personal-details-form">
         <h4 class="name">{{ profile.name }}  {{ profile.lastName }}</h4>
 
-        <!-- Email -->
-        <p class="info"><mat-icon>person</mat-icon> {{ profile.email }}</p>
+<!--        &lt;!&ndash; Email &ndash;&gt;-->
+<!--        <p class="info"><mat-icon>person</mat-icon> {{ profile.email }}</p>-->
 
         <!-- Phone -->
         <p class="info"><mat-icon>phone</mat-icon> {{ profile.phone }}</p>
