--- a/src/app/Restock/resource/inventory/pages/restaurant-inventory/restaurant-inventory.component.html
+++ b/src/app/Restock/resource/inventory/pages/restaurant-inventory/restaurant-inventory.component.html
@@ -8,7 +8,10 @@
 
   <!-- Carousel (si hay supplies) -->
   @if (supplies.length > 0) {
-    <app-supply-carousel [supplies]="supplies" [categories]="categories" />
+    <app-supply-carousel
+      [supplies]="supplies"
+      [categories]="categories"
+      (edit)="editSupply($event)"/>
   }
 
   <!-- Tabla de inventario -->
