feat(inventory): add edit button and display supply name in carousel

--- a/src/app/Restock/resource/inventory/components/supply-carousel/supply-carousel.component.css
+++ b/src/app/Restock/resource/inventory/components/supply-carousel/supply-carousel.component.css
@@ -44,6 +44,12 @@
   color: #444;
 }
 
+.edit-btn {
+  margin-top: 0.5rem;
+  width: 100%;
+}
+
+
 .nav-button {
   position: absolute;
   z-index: 2;
