--- a/src/app/Restock/resource/inventory/pages/restaurant-inventory/restaurant-inventory.component.html
+++ b/src/app/Restock/resource/inventory/pages/restaurant-inventory/restaurant-inventory.component.html
@@ -11,7 +11,8 @@
     <app-supply-carousel
       [supplies]="supplies"
       [categories]="categories"
-      (edit)="editSupply($event)"/>
+      (edit)="editSupply($event)"
+    />
   }
 
   <!-- Tabla de inventario -->
