--- a/src/app/shared/components/create-and-edit-form/create-and-edit-form.component.css
+++ b/src/app/shared/components/create-and-edit-form/create-and-edit-form.component.css
@@ -36,3 +36,10 @@
 .file-upload input[type="file"] {
   padding-top: 0.5rem;
 }
+
+.form-actions {
+  display: flex;
+  justify-content: flex-end;
+  gap: 0.5rem;
+  margin-top: 1rem;
+}
