feat(base-modal): add description option.

--- a/src/app/shared/components/base-modal/base-modal.component.html
+++ b/src/app/shared/components/base-modal/base-modal.component.html
@@ -1,9 +1,17 @@
 <div class="modal-header">
   <h2 class="modal-title">{{ data.title }}</h2>
-  <button mat-icon-button (click)="close()">
+    <button mat-icon-button (click)="close()">
     <mat-icon>close</mat-icon>
-  </button>
+    </button>
 </div>
+
+@if(data.description) {
+  <div class="modal-description">
+    <p>{{ data.description }}</p>
+  </div>
+}
+
+<span class="border"></span>
 
 <div class="modal-content">
   <ng-template #container></ng-template>
