--- a/src/app/shared/components/base-modal/base-modal.component.css
+++ b/src/app/shared/components/base-modal/base-modal.component.css
@@ -2,8 +2,18 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 1.5rem 2rem 1rem;
+}
+
+.modal-description {
+  font-size: 0.95rem;
+  color: #333;
+  margin-bottom: 0.5rem;
+  padding: 0rem 2rem 0.5rem;
+}
+
+.border {
   border-bottom: 1px solid #e0e0e0;
-  padding: 2rem;
 }
 
 .modal-title {
@@ -12,6 +22,5 @@
 }
 
 .modal-content {
-  padding: 2rem;
-
+  padding: 0.5rem 2rem;
 }
