feat(supplier-orders): change new id situation in the update.

--- a/src/app/Restock/monitoring/suppliers-orders/pages/suppliers-orders-overview/suppliers-orders-overview.component.html
+++ b/src/app/Restock/monitoring/suppliers-orders/pages/suppliers-orders-overview/suppliers-orders-overview.component.html
@@ -6,7 +6,7 @@
         [adminRestaurantsProfiles]="restaurantNameMap"
         [orderSuppliesDetails]="detailedSuppliesGroupedByOrder"
         [batchesGroupedByOrder]="batchesGroupedByOrder"
-        (declineDialog)="openDeclineOrderDialog($event, 'decline')"
+        (declineDialog)="openDeleteOrderDialog($event, 'decline')"
         (manageNewOrderModal)="openManageOrdersModal($event)"
       />
     </mat-tab>
@@ -15,7 +15,7 @@
       <app-approved-orders
         [orders]="ordersInProcess"
         [adminRestaurantsProfiles]="restaurantNameMap"
-        (deleteDialog)="openDeclineOrderDialog($event, 'cancel')"
+        (deleteDialog)="openDeleteOrderDialog($event, 'cancel')"
       />
     </mat-tab>
 
